--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@
 body {
   margin: 0;
   font-family: "Noto Sans", sans-serif;
-  background-image: url(../01.png);
+  background-image: url(../app-marturia/568191.png);
 }
 
 .container {
